package com.example;
public interface WiFiEnabled{
    Boolean isWiFiAvailable();
}